make check hangs in ./common when built on AIX.
get_max_fds() returns MAX_INT32 rather than a sensible number
This patch may help! i.e., someone may want to review the order of the
comparisons made - or the result will probably always be 20.
make check hangs in ./common when built on AIX.
get_max_fds() returns MAX_INT32 rather than a sensible number
This patch may help! i.e., someone may want to review the order of the
comparisons made - or the result will probably always be 20.
I am not sure whether this patch is the best for all platforms.
For now I install a fix that detects INT32_MAX and returns 256 then. May it be
that AIX does not use a fixed size structure? In this case it would be usable
to know whether there is a way to get information on the highest fd currently in
use.
it was a while back, and i removed an archive with my notes, so will need
to repeat when i have more time.
On May 11, 2015 8:22 PM, "Werner Koch via BTS" <gnupg@bugs.g10code.com>
wrote:
Werner Koch <wk@gnupg.org> added the comment:
I am not sure whether this patch is the best for all platforms.
For now I install a fix that detects INT32_MAX and returns 256 then. May
it be
that AIX does not use a fixed size structure? In this case it would be
usable
to know whether there is a way to get information on the highest fd
currently in
use.
status: unread -> chatting
GnuPG's BTS <gnupg@bugs.g10code.com>
<T1778>
AIX defaults to "unlimited" descriptors. However, the value may be overridden by
setting the hard limit. In tcsh, for example, one can work around the issue with:
limit descriptors 4096
limit -h descriptors 4096